Fixed bug with interline spacing setting.

--- a/Niv1984/app/src/main/assets/css/base.css
+++ b/Niv1984/app/src/main/assets/css/base.css
@@ -1,7 +1,10 @@
+#body {
+    line-height: 1.5;
+}
+
 #wrapper {
     margin-left: 0.15em;
     margin-right: 0.15em;
-    line-height: 1.5;
 }
 
 .fragment {
